[gd_scene load_steps=4 format=3 uid="uid://bbxundhq8rmle"]

[ext_resource type="Script" path="res://scenes/music_shop.gd" id="1_g3mk8"]
[ext_resource type="Texture2D" uid="uid://ckawa3oi5fjdg" path="res://assets/Shop/Music Shop.png" id="2_3jc8y"]
[ext_resource type="Texture2D" uid="uid://x11ankw5ek46" path="res://assets/CENTERED BUTTONS/exit but.png" id="3_y0omi"]

[node name="MusicShop" type="Node2D"]
script = ExtResource("1_g3mk8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_direction = 1
offset_right = 1918.0
offset_bottom = 1079.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("2_3jc8y")

[node name="Popup" type="Popup" parent="."]
mode = 3
position = Vector2i(590, 325)
size = Vector2i(705, 445)
transparent = true

[node name="Label" type="Label" parent="Popup"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 4.0
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="OkButton" type="Button" parent="Popup"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.195
offset_top = -136.0
offset_right = -44.56
offset_bottom = -52.145
grow_horizontal = 2
grow_vertical = 2
text = "OK"

[node name="CancelButton" type="Button" parent="Popup"]
anchors_preset = -1
anchor_left = 0.58
anchor_top = 0.693
anchor_right = 0.58
anchor_bottom = 0.705
offset_right = 158.0
offset_bottom = 78.0
text = "Cancel"

[node name="disc_one" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 806.0
offset_top = 284.0
offset_right = 1139.0
offset_bottom = 565.0

[node name="disc_two" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1363.0
offset_top = 285.0
offset_right = 1696.0
offset_bottom = 566.0

[node name="disc_three" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1085.0
offset_top = 527.0
offset_right = 1418.0
offset_bottom = 808.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 1710.0
offset_top = 273.0
offset_right = 1792.0
offset_bottom = 352.0
scale = Vector2(0.622184, 0.58321)
texture_normal = ExtResource("3_y0omi")
ignore_texture_size = true
stretch_mode = 3

[connection signal="pressed" from="disc_one" to="." method="_on_disc_one_pressed"]
[connection signal="pressed" from="disc_two" to="." method="_on_disc_two_pressed"]
[connection signal="pressed" from="disc_three" to="." method="_on_disc_three_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
